Modal overflow bug fixed

--- a/src/Components/DeleteEntryModal/DeleteEntryModal.css
+++ b/src/Components/DeleteEntryModal/DeleteEntryModal.css
@@ -1,11 +1,30 @@
 .deleteentrymodal-container {
   display: flex;
-  width: 100%;
-  position: absolute;
-  left: 10%;
-  right: 10%;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
 }
 
 .deleteentrymodal-title {
-  font-weight: bold;
+  font-size: 21px;
+}
+
+.deleteentrymodal-btns {
+  display: flex;
+  padding: 20px;
+  padding-bottom: 5px;
+}
+
+.deleteentrymodal-delete-btn {
+  margin-right: 20px;
+  padding: 5px 10px 5px 10px;
+  color: var(--secondary);
+  background-color: var(--secondary-accent);
+  border: 1px solid var(--secondary);
+}
+
+.deleteentrymodal-cancel-btn {
+  box-sizing: border-box;
+  padding: 5px 10px 5px 10px;
+  border: 1px solid var(--secondary-accent);
 }
