--- a/src/Components/Modal/Modal.css
+++ b/src/Components/Modal/Modal.css
@@ -5,12 +5,8 @@
 .modal-content {
   position: fixed;
   top: 20%;
-  bottom: 60%;
-  left: 30%;
-  right: 30%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  left: 10%;
+  right: 10%;
   background-color: var(--secondary);
   color: var(--secondary-accent);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
@@ -23,6 +19,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.7);
   z-index: 1;
 }
